--- a/home.css
+++ b/home.css
@@ -7,7 +7,7 @@
   justify-content: center;
   flex-direction: row;
   overflow: hidden;
-  background-color: lightblue;
+  background-color: rgb(4, 2, 22);
 }
 
 #home img {
