--- a/about.css
+++ b/about.css
@@ -59,12 +59,13 @@ td {
 #about .grid-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-template-rows: repeat(auto-fit, minmax(min-content, max-content));
+  grid-template-rows: repeat(auto-fit, minmax(max-content, max-content));
   gap: 16px;
-  padding: 20px;
+  padding: 0;
   width: 65%;
   margin: 0 auto; /* Centra el contenedor en la pantalla */
   align-items: start;
+  margin-bottom: 40px;
 }
 #about .grid-item {
   background-color: rgb(46, 37, 37);
