--- a/base.css
+++ b/base.css
@@ -22,7 +22,7 @@ a,
 button {
   font-weight: 500;
   font-size: 16px;
-  color: #2c2b2b;
+  color: #a09696;
   text-decoration: none;
 }
 
@@ -78,6 +78,7 @@ button {
   color: #fff;
   border-radius: 5px;
   transition: background-color 0.3s ease;
+  border: 2px solid #ccc; /* Color del borde gris */
 }
 
 .buttonSecondary {
@@ -91,6 +92,37 @@ button {
   border: 2px solid #ccc; /* Color del borde gris */
   border-radius: 5px;
   transition: background-color 0.3s ease;
+}
+
+.buttonYear {
+  display: inline-block;
+  padding: 4px 12px;
+  font-size: 12px;
+  text-align: center;
+  text-decoration: none;
+  background-color: #5b5b5b; /* Sin color de fondo */
+  color: #333; /* Color del texto */
+  border: 1px solid #ccc; /* Color del borde gris */
+  border-radius: 15px;
+  transition: background-color 0.3s ease;
+}
+
+.buttonProject {
+  display: inline-block;
+  padding: 2px 12px;
+  font-size: 14px;
+  text-align: center;
+  text-decoration: none;
+  background-color: #002750; /* Sin color de fondo */
+  color: #333; /* Color del texto */
+  border: 1px solid #ccc; /* Color del borde gris */
+  border-radius: 15px;
+  transition: background-color 0.3s ease;
+  text-transform: uppercase;
+}
+
+.buttonProject li {
+  font-weight: 100 !important;
 }
 
 .button:hover {
